WIP 3 - Visualisations, animations, UI, data improvements

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -8,4 +8,5 @@
 @import "/src/styles/core/color.sass"
 @import "/src/styles/core/typography.sass"
 
+@import "/src/styles/components/block.sass"
 @import "/src/styles/components/food-item.sass"
