--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -17,3 +17,7 @@ html,body
   min-height: 100svh
   background-color: var(--color-primary-1)
   color: var(--color-secondary-1)
+  font-size: 16px
+
+  @media (min-height: 700px)
+    font-size: 20px
