--- a/src/styles/core/typography.sass
+++ b/src/styles/core/typography.sass
@@ -1,2 +1,27 @@
 .label
-  font-size: 12px
+  font-size: 0.625rem
+
+.label-caps
+  font-weight: bold
+  font-size: 0.5rem
+  letter-spacing: 0.05em
+  text-transform: uppercase
+
+.uppercase
+  text-transform: uppercase
+.lowercase
+  text-transform: lowercase
+.capitalize
+  text-transform: capitalize
+.transform-none
+  text-transform: none
+
+strong, b, .bold
+  font-weight: 600
+
+.text-left
+  text-align: left
+.text-center
+  text-align: center
+.text-right
+  text-align: right
