--- a/src/styles/components/food-item.sass
+++ b/src/styles/components/food-item.sass
@@ -2,6 +2,7 @@
   width: 1em
   height: 1em
   display: flex
+  flex-shrink: 0
   border-radius: 100%
   align-items: center
   justify-content: center
