Add toolitps and isometric farm

--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -1,6 +1,7 @@
 :root
   --color-k: #{$color-k}
   --color-ff: #{$color-ff}
+  --color-primary-0: #{$color-primary-0}
   --color-primary-1: #{$color-primary-1}
   --color-primary-2: #{$color-primary-2}
   --color-primary-3: #{$color-primary-3}
