--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -19,6 +19,7 @@ html,body
   background-color: var(--color-primary-1)
   color: var(--color-secondary-1)
   font-size: 16px
+  overflow: hidden
 
   @media (min-height: 700px)
     font-size: 20px
