--- a/src/styles/core/color.sass
+++ b/src/styles/core/color.sass
@@ -17,6 +17,7 @@
 +make-color($color-ff, "ff")
 +make-color($color-k, "k")
 
++make-color($color-primary-0, "primary-0")
 +make-color($color-primary-1, "primary-1")
 +make-color($color-primary-2, "primary-2")
 +make-color($color-primary-3, "primary-3")
