--- a/src/styles/core/typography.sass
+++ b/src/styles/core/typography.sass
@@ -1,3 +1,16 @@
+p
+  margin-bottom: 0.75em
+
+h1,h2,h3
+  font-weight: bold
+  margin-bottom: 0.5em
+
+.title
+  font-size: 3rem
+  font-weight: bold
+  line-height: 1.1
+  margin-bottom: 0.5em
+
 .label
   font-size: 0.625rem
 
@@ -6,6 +19,10 @@
   font-size: 0.5rem
   letter-spacing: 0.05em
   text-transform: uppercase
+
+.big-number
+  font-size: 2em
+  min-width: 4.25ch
 
 .uppercase
   text-transform: uppercase
