WIP: UI and dashboard

--- a/src/styles/components/block.sass
+++ b/src/styles/components/block.sass
@@ -1,6 +1,9 @@
 .block
   display: flex
   flex-direction: column
-  gap: 1em 0
-  padding: 1em
-  border-radius: 1em
+  gap: 1rem 0
+  padding: 1rem
+  border-radius: 1rem
+
+  h2, .block-title
+    margin-bottom: 0
