--- a/src/styles/core/color.sass
+++ b/src/styles/core/color.sass
@@ -25,6 +25,8 @@
 +make-color($color-secondary-2, "secondary-2")
 +make-color($color-secondary-3, "secondary-3")
 +make-color($color-tertiary-1, "tertiary-1")
++make-color($color-error-1, "error-1")
++make-color($color-error-2, "error-2")
 
 @for $i from 1 through length($colors-animal)
   +make-color(nth($colors-animal, $i), "animal-" + $i)
