--- a/src/styles/vars/color.scss
+++ b/src/styles/vars/color.scss
@@ -56,3 +56,7 @@ $colors-plant: palette("E", "60"),
   palette("O", "60"),
   palette("Z", "50"),
   palette("H", "50");
+
+$color-error-1: palette("A", "70");
+$color-error-2: palette("A", "50");
+// $color-error-2: #6E4E5F;
