--- a/src/styles/components/block.sass
+++ b/src/styles/components/block.sass
@@ -2,8 +2,10 @@
   display: flex
   flex-direction: column
   gap: 1rem 0
-  padding: 1rem
-  border-radius: 1rem
+  padding: var(--border-radius)
+  border-radius: var(--border-radius)
+  background: var(--color-primary-1)
+  // border: 1px solid var(--color-secondary-3)
 
   h2, .block-title
     margin-bottom: 0
