--- a/src/styles/components/food-item.sass
+++ b/src/styles/components/food-item.sass
@@ -1,7 +1,7 @@
 .food-item-avatar
   width: 1em
   height: 1em
-  display: flex
+  display: inline flex
   flex-shrink: 0
   border-radius: 100%
   align-items: center
