--- a/src/styles/components/food-item.sass
+++ b/src/styles/components/food-item.sass
@@ -6,3 +6,14 @@
   border-radius: 100%
   align-items: center
   justify-content: center
+
+.food-item-pill
+  display: inline-flex
+  align-items: center
+  justify-content: center
+  border-radius: 1em
+  font-size: 0.75em
+  font-weight: 600
+  gap: 2px
+  padding: 0 0.25em
+  border: 1px solid var(--color-secondary-3)
