Big end screen changes

--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -10,6 +10,7 @@
   --color-secondary-3: #{$color-secondary-3}
   --color-tertiary-1: #{$color-tertiary-1}
   --color-tertiary-2: #{$color-tertiary-2}
+  --color-error-0: #{$color-error-0}
   --color-error-1: #{$color-error-1}
   --color-error-2: #{$color-error-2}
 
