Welcome screen tweaks

--- a/src/styles/core/typography.sass
+++ b/src/styles/core/typography.sass
@@ -35,6 +35,15 @@ h1,h2,h3
 em
   font-style: italic
 
+sup
+  vertical-align: super
+  font-size: 0.5em
+
+  a
+    opacity: 0.75
+    text-decoration: none
+    font-weight: bold
+
 strong, b, .bold
   font-weight: 600
 
@@ -44,3 +53,9 @@ strong, b, .bold
   text-align: center
 .text-right
   text-align: right
+
+a
+  color: inherit
+
+  &:visited
+    color: inherit
