--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -30,5 +30,5 @@ html,body
   font-size: 16px
   overflow: hidden
 
-  @media (min-height: 700px)
+  @media (min-height: 700px) and (min-width: 1080px)
     font-size: 20px
