Add undo functionality

--- a/src/styles/core/typography.sass
+++ b/src/styles/core/typography.sass
@@ -20,6 +20,11 @@ h1,h2,h3
   letter-spacing: 0.05em
   text-transform: uppercase
 
+.text-xl
+  font-size: 1.75rem
+.text-lg
+  font-size: 1.25rem
+
 .big-number
   font-size: 2em
 
