--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -13,6 +13,7 @@
   --color-error-0: #{$color-error-0}
   --color-error-1: #{$color-error-1}
   --color-error-2: #{$color-error-2}
+  --color-error-3: #{$color-error-3}
 
   @for $i from 1 through length($colors-animal)
     --color-animal-#{$i}: #{nth($colors-animal, $i)}
