--- a/src/styles/core/color.sass
+++ b/src/styles/core/color.sass
@@ -27,6 +27,7 @@
 +make-color($color-tertiary-1, "tertiary-1")
 +make-color($color-error-1, "error-1")
 +make-color($color-error-2, "error-2")
++make-color($color-error-3, "error-3")
 
 @for $i from 1 through length($colors-animal)
   +make-color(nth($colors-animal, $i), "animal-" + $i)
