--- a/src/styles/vars/color.scss
+++ b/src/styles/vars/color.scss
@@ -60,4 +60,4 @@ $colors-plant: palette("Z", "50"),
 $color-error-0: palette("A", "90");
 $color-error-1: palette("A", "70");
 $color-error-2: palette("A", "50");
-// $color-error-2: #6E4E5F;
+$color-error-3: palette("A", "30");
