--- a/src/styles/core/animation.sass
+++ b/src/styles/core/animation.sass
@@ -1,5 +1,24 @@
+@keyframes pulse
+  0%
+    transform: scale(1)
+  100%
+    transform: scale(4)
+    opacity: 0
+
 @keyframes flash
   0%
     filter: brightness(1)
   100%
     filter: brightness(1.125)
+
+@keyframes levitate
+  0%
+    transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg) translateZ(0)
+  100%
+    transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg) translateZ(0.5rem)
+
+@keyframes levitate-shadow
+  0%
+    box-shadow: -2rem 2rem 1rem rgba(black, 0.25)
+  100%
+    box-shadow: -3rem 3rem 2rem rgba(black, 0.25)
