Mobile design WIP

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,5 +1,6 @@
 @import "/src/styles/vars/color.scss"
 @import "/src/styles/vars/border.sass"
+@import "/src/styles/vars/screens.sass"
 
 @import "/src/styles/core/reset.sass"
 @import "/src/styles/core/base.sass"
