--- a/src/styles/vars/color.scss
+++ b/src/styles/vars/color.scss
@@ -13,6 +13,8 @@ $color-secondary-3: #BFE0DF;
 $color-tertiary-1: #5ed78a;
 $color-tertiary-2: #2ec06d;
 
+$color-primary-2-alpha-0: rgba(23, 140, 137, 0);
+
 
 // Stephen Hutchings' OKLCH smooth palette variables
 // See: https://www.s-ings.com/scratchpad/oklch-smooth/
