Add global menu

--- a/src/styles/core/typography.sass
+++ b/src/styles/core/typography.sass
@@ -20,6 +20,8 @@ h1,h2,h3
   letter-spacing: 0.05em
   text-transform: uppercase
 
+.text-2xl
+  font-size: 2.25rem
 .text-xl
   font-size: 1.75rem
 .text-lg
