--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -8,6 +8,7 @@
 @import "/src/styles/core/display.sass"
 @import "/src/styles/core/flex.sass"
 @import "/src/styles/core/color.sass"
+@import "/src/styles/core/layout.sass"
 @import "/src/styles/core/animation.sass"
 @import "/src/styles/core/typography.sass"
 
