--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -33,6 +33,9 @@ html,body
   font-size: 16px
   overflow: hidden
 
+  &::-webkit-scrollbar
+    display: none
+
   @media (min-height: 700px) and (min-width: 1080px)
     font-size: 20px
 
