--- a/src/styles/core/typography.sass
+++ b/src/styles/core/typography.sass
@@ -83,7 +83,7 @@ a
     text-decoration: underline
 
   @media (hover: hover)
-    &:hover
+    &.hover-brighten:hover
       filter: brightness(1.1)
 
 @media (max-width: $screen-sm)
