Finish 'which diets are best for the planet'

--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -9,6 +9,7 @@
 @import "/src/styles/core/flex.sass"
 @import "/src/styles/core/color.sass"
 @import "/src/styles/core/layout.sass"
+@import "/src/styles/core/figure.sass"
 @import "/src/styles/core/animation.sass"
 @import "/src/styles/core/typography.sass"
 
