--- a/src/styles/core/typography.sass
+++ b/src/styles/core/typography.sass
@@ -30,12 +30,16 @@ h1,h2,h3
   letter-spacing: 0.05em
   text-transform: uppercase
 
+  // &.text-large
+
 .text-2xl
   font-size: 2.25rem
 .text-xl
   font-size: 1.75rem
 .text-lg
   font-size: 1.25rem
+.text-base
+  font-size: 1rem
 
 .big-number
   font-size: 2em
