Add labels to charts

--- a/src/styles/core/figure.sass
+++ b/src/styles/core/figure.sass
@@ -5,3 +5,10 @@ figure
 
   + p
     margin-top: 2.5em
+
+.figure-title
+  line-height: 1.25
+
+.figure-subtitle
+  font-size: 1rem
+  margin-top: -0.25rem
