--- a/src/styles/core/layout.sass
+++ b/src/styles/core/layout.sass
@@ -11,3 +11,12 @@ main
   max-width: 550px
   min-height: 100vh
   min-height: 100lvh
+
+hr
+  margin: 3rem auto
+  border: none
+  border-top: 1px solid var(--color-secondary-3)
+
+  &.spacer
+    margin: 2rem auto
+    border-top: none
