--- a/src/styles/core/figure.sass
+++ b/src/styles/core/figure.sass
@@ -3,12 +3,16 @@ figure
   background: var(--color-secondary-2)
   border-radius: var(--border-radius)
 
+  &.figure-wide
+    margin-left: -4rem
+    margin-right: -4rem
+
   + p, + h2, + h3
     margin-top: 2.5em
 
 .figure-title
-  line-height: 1.25
-  font-size: 1.75rem
+  line-height: 1.2
+  font-size: 1.675rem
   font-weight: bold
   margin-bottom: 0.4em
 
