--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -36,8 +36,11 @@ html,body
   &::-webkit-scrollbar
     display: none
 
-  @media (min-height: 700px) and (min-width: 1080px)
+  @media (min-height: 620px) and (min-width: 1250px)
+    font-size: 18px
+
+  @media (min-height: 620px) and (min-width: 1280px)
     font-size: 20px
 
-  @media (max-width: $screen-sm)
+  @media (max-width: $screen-sm), (max-height: 520px)
     font-size: 14px
