Improve gameplay farm swap UI

--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -42,5 +42,8 @@ html,body
   @media (min-height: 620px) and (min-width: 1280px)
     font-size: 20px
 
+  @media (min-height: 750px) and (min-width: 1500px)
+    font-size: 24px
+
   @media (max-width: $screen-sm), (max-height: 520px)
     font-size: 14px
