Optimise icon sizes

--- a/src/styles/core/base.sass
+++ b/src/styles/core/base.sass
@@ -42,7 +42,10 @@ html,body
   @media (min-height: 620px) and (min-width: 1280px)
     font-size: 20px
 
-  @media (min-height: 750px) and (min-width: 1500px)
+  @media (min-height: 700px) and (min-width: 1500px)
+    font-size: 22px
+
+  @media (min-height: 775px) and (min-width: 1700px)
     font-size: 24px
 
   @media (max-width: $screen-sm), (max-height: 520px)
