Update end slides

--- a/src/styles/core/animation.sass
+++ b/src/styles/core/animation.sass
@@ -11,6 +11,12 @@
     transform: scale(4)
     opacity: 0
 
+@keyframes dance
+  0%
+    transform: rotate(-15deg)
+  100%
+    transform: rotate(15deg)
+
 @keyframes flash
   0%
     filter: brightness(1)
