--- a/src/styles/core/color.sass
+++ b/src/styles/core/color.sass
@@ -25,6 +25,7 @@
 +make-color($color-secondary-2, "secondary-2")
 +make-color($color-secondary-3, "secondary-3")
 +make-color($color-tertiary-1, "tertiary-1")
++make-color($color-tertiary-1, "tertiary-2")
 +make-color($color-error-1, "error-1")
 +make-color($color-error-2, "error-2")
 +make-color($color-error-3, "error-3")
