--- a/src/styles/core/layout.sass
+++ b/src/styles/core/layout.sass
@@ -21,3 +21,7 @@ hr
   &.spacer
     margin: 2rem auto
     border-top: none
+
+@media (min-height: 700px) and (min-width: 1500px)
+  .article-content
+    max-width: 650px
